<resources>
    <string name="app_name">10120249Latihan2</string>
    <string name="register">doesn\'t have account ? <a href=""><font color="#ffff">Register</font></a></string>
    <string name="daftar">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nohp">Phone Number</string>
    <string name="blood">Blood</string>
    <string name="reshus">Rheshus</string>
    <string name="password">Password</string>
    <string name="repass">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organi">Organization</string>
    <string name="job">Job</string>
    <string name="address">Home Address</string>
    <string name="loc">Default Location</string>
    <string name="terms">Agree with Terms and Condition</string>
    <string name="almost">Almost There</string>
    <string name="thank">Thakk you for registering with us. One more</string>
    <string name="step">step, you need to check your email</string>
    <string name="active">to active your account</string>
    <string name="verify">Verify your Account</string>
    <string name="send">We have send verification code your email</string>
    <string name="enter">enter verification code here.</string>
    <string name="getcode">doesn\'t get the code ? <a href=""><font color="#fff">Resend</font></a></string>
    <string name="nama">Stanislaus Katska Alvin Parulian Sitanggang</string>
    <string name="blood_type">B</string>
</resources>